Implement Item search method